--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_file_upload">FileUpload</string>
+    <string name="title_activity_camera_preview">CameraPreview</string>
 
 </resources>
