--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">s3qlDroid</string>
@@ -5,5 +6,6 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_file_upload">FileUpload</string>
     <string name="title_activity_camera_preview">CameraPreview</string>
+    <string name="title_activity_media_scanner_wrapper">MediaScannerWrapper</string>
 
 </resources>
