--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_camera_preview">CameraPreview</string>
     <string name="title_activity_media_scanner_wrapper">MediaScannerWrapper</string>
     <string name="title_activity_s3_dbc">S3DBC</string>
+    <string name="title_activity_function_list">FunctionList</string>
 
 </resources>
