--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_s3_dbc">S3DBC</string>
     <string name="title_activity_function_list">FunctionList</string>
     <string name="title_activity_insert_demo">InsertDemo</string>
+    <string name="title_activity_select_demo">SelectDemo</string>
 
 </resources>
