--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_function_list">FunctionList</string>
     <string name="title_activity_insert_demo">InsertDemo</string>
     <string name="title_activity_select_demo">SelectDemo</string>
+    <string name="title_activity_multi_media_proceesing">MultiMediaProceesing</string>
 
 </resources>
