--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="title_activity_multi_media_proceesing">MultiMediaProceesing</string>
     <string name="title_activity_db_viewer">DbViewer</string>
     <string name="title_activity_open_youtube_player">OpenYouTubePlayer</string>
+    <string name="title_activity_xml_importer">XmlImporter</string>
+    <string name="title_activity_file_manager">FileManager</string>
+    <string name="title_activity_file_download">FileDownload</string>
+
 </resources>
